Resolves: tdf#135128 should get the old attr, not the default attr

so we retain the original shadow distance if its not changed but
the color is. Use GetOldAttr which is intended for that.

Change-Id: I2d4b5a5b035c94cd8f2cc8f73bd239fab85b945f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101148
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>